--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <html>
 
 <head>
+  <link rel="stylesheet" href="css/screen.css" media="screen">
+  <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/lodash/lodash.min.js"></script>
   <script src="bower_components/raphael/raphael-min.js"></script>
   <script src="bower_components/Keypress/keypress-2.1.3.min.js"></script>
-  <link rel="stylesheet" href="css/screen.css" media="screen">
+  <script src="js/app.js"></script>
 </head>
 
 <body>
   <div id="wrap"></div>
-  <script src="js/app.js"></script>
 </body>
 
 </html>
