--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   <script src="bower_components/lodash/lodash.min.js"></script>
   <script src="bower_components/raphael/raphael-min.js"></script>
   <script src="bower_components/Keypress/keypress-2.1.3.min.js"></script>
+  <script src="js/icons.js"></script>
   <script src="js/app.js"></script>
 </head>
 
 <body>
-  <div id="wrap"></div>
+  <div id="wrap">
+  </div>
 </body>
 
 </html>
