--- a/index.html
+++ b/index.html
@@ -2,17 +2,38 @@
 
 <head>
   <link rel="stylesheet" href="css/screen.css" media="screen">
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" media="screen">
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/lodash/lodash.min.js"></script>
   <script src="bower_components/raphael/raphael-min.js"></script>
   <script src="bower_components/Keypress/keypress-2.1.3.min.js"></script>
+  <script src="bower_components/trianglify/dist/trianglify.min.js"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="bower_components/commonmark/dist/commonmark.min.js"></script>
   <script src="js/icons.js"></script>
   <script src="js/app.js"></script>
 </head>
 
 <body>
+  <div id="bg">
+  </div>
   <div id="wrap">
   </div>
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">About 6x10</h4>
+        </div>
+        <div class="modal-body">
+
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
 
 </html>
