--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
 
 <head>
+  <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>6x10</title>
+
   <link rel="stylesheet" href="css/screen.css" media="screen">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" media="screen">
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
