--- a/index.html
+++ b/index.html
@@ -24,16 +24,27 @@
   </div>
   <div id="wrap">
   </div>
-  <!-- Modal -->
-  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+          <h4 class="modal-title">About 6x10</h4>
+        </div>
+        <div class="modal-body about-body">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="modal fade" id="solvedModal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">About 6x10</h4>
+          <h4 class="modal-title">Solved!</h4>
         </div>
-        <div class="modal-body">
-
+        <div class="modal-body solved-body">
+            <h1>Well Done!</h1>
         </div>
       </div>
     </div>
